# nMCP-client

./: .env.example  .gitignore  AGENTS.md  README.md  config.py  main.py  nMCP-client-onefile.spec  nMCP-client-standalone.spec  nMCP-client-v0.0.1.spec  nMCP-client.spec  pyproject.toml  requirements.txt
docs/: agent-lessons.md  niagara-agent-playbook.md
logs/: .gitkeep
scripts/: build_windows.ps1
src/: __init__.py  agent.py  async_runner.py  mcp_client.py  mcp_proxy.py  safety.py
src/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  xai_provider.py
src/memory/: __init__.py  manager.py
src/ui/: __init__.py  about_dialog.py  app.py  approval_dialog.py  chat_widget.py  connection_widget.py  help_dialog.py  memory_health_widget.py  plan_review_dialog.py  tools_widget.py
