[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nmcp-client"
version = "0.1.0"
description = "Lightweight desktop MCP client for Niagara connections"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "PySide6>=6.6.0",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
nmcp-client = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
